creating node server using built in http module

--- a/Phase_Three/Node http server/package.json
+++ b/Phase_Three/Node http server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evnode",
-  "type": "module",
+  "type": "commonjs",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -9,5 +9,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "mime-types": "^2.1.35"
+  }
 }
