--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,1 @@
-./Phase_Three/express_server/node_modules
-./Phase_Three/node_http_server/node_modules
-./Phase_Three/module_exc/node_modules
+./node_modules
