random number generating function

--- a/Phase_Three/nodeModulesProject/package.json
+++ b/Phase_Three/nodeModulesProject/package.json
@@ -2,12 +2,12 @@
   "name": "nodemodulesproject",
   "version": "1.0.0",
   "type": "module",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
