--- a/Phase_Three/nodeModulesProject/package.json
+++ b/Phase_Three/nodeModulesProject/package.json
@@ -9,5 +9,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "mime-types": "^2.1.35"
+  }
 }
